#509: better support for FHIR ATNA auditing